Działająca wersja, potrzebne kosmetyczne zmiany

--- a/FizzBuzz-WebApp/Pages/ZapisaneWSesji.cshtml
+++ b/FizzBuzz-WebApp/Pages/ZapisaneWSesji.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model FizzBuzz_WebApp.Pages.OstatnioSzukaneModel
+@model FizzBuzz_WebApp.Pages.ZapisaneWSesjiModel
 @{
-    ViewData["Title"] = "Ostatnio szukane ";
+    ViewData["Title"] = "Zapisane w sesji ";
 }
 <h1>@ViewData["Title"]</h1>
 <p></p>
